--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8084
 
 bot.name=beciul_bot
 bot.token=8105233586:AAFE4Pu0xWnMhCh5KDp8rtOGcikbCiqvCuE
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=userok
+spring.rabbitmq.password=p@ssw0rd
