add node module

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,13 @@
   <modules>
     <module>dispatcher</module>
     <module>common-rabbitmq</module>
+      <module>node</module>
   </modules>
 
   <properties>
     <maven.compiler.spource>17</maven.compiler.spource>
     <maven.compiler.target>17</maven.compiler.target>
+    <telegrambot.starter.version>6.1.0</telegrambot.starter.version>
   </properties>
 
   <parent>
