--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>5.7.1</version>
+            <version>${telegrambot.starter.version}</version>
         </dependency>
 
         <dependency>
