--- a/node/pom.xml
+++ b/node/pom.xml
@@ -16,16 +16,32 @@
     </properties>
 
     <dependencies>
+
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
     <dependency>
         <groupId>org.telegram</groupId>
         <artifactId>telegrambots-spring-boot-starter</artifactId>
         <version>${telegrambot.starter.version}</version>
     </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.18</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -37,5 +53,6 @@
         <artifactId>common-rabbitmq</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+
 </dependencies>
 </project>
