--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=userok
 spring.rabbitmq.password=p@ssw0rd
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pogreb
+spring.datasource.username=postgres
+spring.datasource.password=kaibaman178
+spring.jpa.generate-ddl=true
