--- a/node/pom.xml
+++ b/node/pom.xml
@@ -54,5 +54,11 @@
         <version>1.0-SNAPSHOT</version>
     </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 </dependencies>
 </project>
