--- a/node/pom.xml
+++ b/node/pom.xml
@@ -60,5 +60,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ru.relex</groupId>
+            <artifactId>common-jpa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 </dependencies>
 </project>
