--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pogreb
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.generate-ddl=true
+
+
+token=${BOT_TOKEN}
+service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
