--- a/node/pom.xml
+++ b/node/pom.xml
@@ -66,5 +66,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>ru.relex</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 </dependencies>
 </project>
