--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
       <module>node</module>
       <module>common-jpa</module>
       <module>rest-service</module>
+    <module>common-utils</module>
+      <module>mail-service</module>
+      <module>mail-service</module>
   </modules>
 
   <properties>
