--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.config.import=/Users/dumitruvivat/Desktop/SpringProject/TelegramBotFirstA
 server.port=8084
 bot.name=${BOT_NAME}
 bot.token=${BOT_TOKEN}
+bot.uri=https://hungry-rockets-stick.loca.lt
+
+server.ssl.enabled=false
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
