--- a/mail-service/src/main/resources/application.properties
+++ b/mail-service/src/main/resources/application.properties
@@ -7,7 +7,10 @@ spring.mail.protocol=${MAIL_PROTOCOL}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.rabbitmq.host=${RABBIT_MQ_HOST}
+spring.rabbitmq.port=${RABBIT_MQ_PORT}
+spring.rabbitmq.username=${RABBIT_MQ_USER}
+spring.rabbitmq.password=${RABBIT_MQ_PASSWORD}
+spring.rabbitmq.queues.registration-mail=registration_mail
 
 service.activation.uri=http://127.0.0.1:8086/user/activation?id={id}
