--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -5,19 +5,20 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=${RABBIT_MQ_USER}
 spring.rabbitmq.password=${RABBIT_MQ_PASSWORD}
-
+spring.rabbitmq.queues.text-message-update=text_message_update
+spring.rabbitmq.queues.doc-message-update=doc_message_update
+spring.rabbitmq.queues.photo-message-update=photo_message_update
+spring.rabbitmq.queues.answer-update=answer_message
+spring.rabbitmq.queues.registration-mail=registration_mail
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/pogreb
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.generate-ddl=true
 
-
 token=${BOT_TOKEN}
 service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
 service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
-service.mail.uri=http://127.0.0.1:8087/mail/send
-
 
 link.address=${LINK_ADDRESS}
 salt=${SALT}
