--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <maven.compiler.spource>17</maven.compiler.spource>
         <maven.compiler.target>17</maven.compiler.target>
+        <common-utils.version>1.0-SNAPSHOT</common-utils.version>
     </properties>
 
     <dependencies>
@@ -25,9 +26,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ru.relex</groupId>
             <artifactId>common-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${common-utils.version}</version>
         </dependency>
     </dependencies>
 </project>
