--- a/node/pom.xml
+++ b/node/pom.xml
@@ -13,6 +13,11 @@
     <properties>
         <maven.compiler.spource>17</maven.compiler.spource>
         <maven.compiler.target>17</maven.compiler.target>
+        <javax-mail.version>1.4</javax-mail.version>
+        <common-utils.version>1.0-SNAPSHOT</common-utils.version>
+        <common-jpa.version>1.0-SNAPSHOT</common-jpa.version>
+        <hibernate-type.version>2.2.2</hibernate-type.version>
+        <postgresql.version>42.2.10</postgresql.version>
     </properties>
 
     <dependencies>
@@ -35,23 +40,17 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.18</version>
+            <version>${postgresql.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vladmihalcea</groupId>
             <artifactId>hibernate-types-52</artifactId>
-            <version>2.2.2</version>
+            <version>${hibernate-type.version}</version>
         </dependency>
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-amqp</artifactId>
-    </dependency>
-
-    <dependency>
-        <groupId>ru.relex</groupId>
-        <artifactId>common-rabbitmq</artifactId>
-        <version>1.0-SNAPSHOT</version>
     </dependency>
 
         <dependency>
@@ -63,19 +62,19 @@
         <dependency>
             <groupId>ru.relex</groupId>
             <artifactId>common-jpa</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${common-jpa.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ru.relex</groupId>
             <artifactId>common-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${common-utils.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
-            <version>1.4</version>
+            <version>${javax-mail.version}</version>
         </dependency>
 
 </dependencies>
