--- a/rest-service/pom.xml
+++ b/rest-service/pom.xml
@@ -14,6 +14,10 @@
     <properties>
         <maven.compiler.spource>17</maven.compiler.spource>
         <maven.compiler.target>17</maven.compiler.target>
+        <common-utils.version>1.0-SNAPSHOT</common-utils.version>
+        <common-jpa.version>1.0-SNAPSHOT</common-jpa.version>
+        <common-io.version>2.4</common-io.version>
+        <postgresql.version>42.2.18</postgresql.version>
     </properties>
 
     <dependencies>
@@ -30,24 +34,24 @@
         <dependency>
             <groupId>ru.relex</groupId>
             <artifactId>common-jpa</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${common-jpa.version}</version>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>${common-io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.18</version>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ru.relex</groupId>
             <artifactId>common-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${common-utils.version}</version>
         </dependency>
     </dependencies>
 </project>
