--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <maven.compiler.spource>17</maven.compiler.spource>
     <maven.compiler.target>17</maven.compiler.target>
     <telegrambot.starter.version>6.1.0</telegrambot.starter.version>
+    <log4j.version>1.2.17</log4j.version>
+    <lombok.servion>1.18.22</lombok.servion>
   </properties>
 
   <parent>
@@ -35,7 +37,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <version>${log4j.version}</version>
     </dependency>
 
     <dependency>
